add flash message

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -3,7 +3,12 @@
 <p>Kelola laporan Masyarakat</p>
 {{#if stories}}
 <table class="striped">
-    
+    {{#if message}}
+    <div style="text-align: center" class="alert alert-{{message.type}}">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <strong>{{message.intro}}</strong> {{message.message}}
+    </div>
+    {{/if}}
     <thead>
         <tr>
             <th>ID Laporan</th>
