--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -26,6 +26,13 @@
         </div>
 
         <div class="row">
+            <div class="input-field">
+                <input type="text" id="title" name="confirmPassword">
+                <label for="title">Konfirmasi Password</label>
+            </div>
+        </div>
+
+        <div class="row">
             <input type="submit" value="Daftar" class="btn">
              <p class="text-center text-muted mt-5 mb-0">Sudah punya akun?<a href="/" class="fw-bold text-body"><u>Login</u></a></p>
         </div>
