--- a/views/setting.hbs
+++ b/views/setting.hbs
@@ -1,60 +1,61 @@
-{{!-- <div class="container">
-<div class="row gutters">
-	<div class="col-xl-9 col-lg-9 col-md-12 col-sm-12 col-12">
-		<div class="card h-100">
-			<div class="card-body">
-				<div class="row gutters">
-					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-						<h6 class="mb-3 text-primary">Personal Details</h6>
-					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-						<div class="form-group">
-							<label for="fullName">Nama Lengkap</label>
-							<input type="text" class="form-control" id="fullName" placeholder="Masukkan nama lengkap">
-						</div>
-					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-						<div class="form-group">
-							<label for="eMail">Email</label>
-							<input type="email" class="form-control" id="eMail" placeholder="Masukkan email">
-						</div>
-					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-						<div class="form-group">
-							<label for="phone">Nomor HP</label>
-							<input type="text" class="form-control" id="phone" placeholder="Masukkan Nomor HP">
-						</div>
-					</div>
-				</div>
-
-                <div class="row gutters">
-					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-						<h6 class="mb-3 text-primary">Security</h6>
-					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-						<div class="form-group">
-							<label for="text">Password Lama</label>
-							<input type="password" class="form-control" id="Street" placeholder="Masukkan password lama">
-						</div>
-					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-						<div class="form-group">
-							<label for="text">Password Baru</label>
-							<input type="password" class="form-control" id="ciTy" placeholder="Masukkan password baru">
-						</div>
-					</div>
-				</div>
-
-				<div class="row gutters">
-					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-						<div class="text-center">
-							<button type="button" id="submit" name="submit" class="btn btn-secondary">Cancel</button>
-							<button type="button" id="submit" name="submit" class="btn btn-primary">Update</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+{{!-- <form action="/setting/{{story._id}}" method="POST">
+<input type="hidden" name="_method" value="PUT"> --}}
+<div class="card shadow-lg mx-3 card-profile-bottom">
+    <div class="card-body p-3">
+    <div class="row gx-4">
+        <div class="col-auto">
+        <div class="avatar avatar-xl position-relative">
+            <img src="/img/team-1.jpg" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
+        </div>
+        </div>
+        <div class="col-auto my-auto">
+        <div class="h-100">
+            <h5 class="mb-1">
+            {{fullName}}
+            </h5>
+            <p class="mb-0 font-weight-bold text-sm">
+            Admin
+            </p>
+        </div>
+        </div>
+    </div>
+    </div>
 </div>
-</div> --}}
+<div class="container-fluid py-4">
+    <div class="row">
+    <div class="col-md-8">
+        <div class="card">
+        <div class="card-header pb-0">
+            <div class="d-flex align-items-center">
+            <p class="mb-0">Edit Profile</p>
+            <button class="btn btn-primary btn-sm ms-auto">Settings</button>
+            </div>
+        </div>
+        <div class="card-body">
+            <p class="text-uppercase text-sm">Informasi Pengguna</p>
+            <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                <label for="example-text-input" class="form-control-label">Nama Lengkap</label>
+                <input class="form-control" type="text" value={{fullName}}>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                <label for="example-text-input" class="form-control-label">Email</label>
+                <input class="form-control" type="email" value={{email}}>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                <label for="example-text-input" class="form-control-label">Nomor HP</label>
+                <input class="form-control" type="text" value={{phoneNumber}}>
+                </div>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    </div>
+</div>
+{{!-- </form> --}}
