update profile, update password

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,7 +18,7 @@
                   <h4 class="font-weight-bolder">Sign In</h4>
                 </div>
                 <div class="card-body">
-                  <form role="form" action="/auth/doLogin" method="POST">
+                  <form role="form" action="/auth/login" method="POST">
                     <div class="mb-3">
                       <input type="email" name="email" class="form-control form-control-lg" placeholder="Email" aria-label="Email">
                     </div>
