--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -82,20 +82,22 @@
                     {{#each stories}}
                     <tr>
                     <td>
-                        <p class="text-xs font-weight-bold mb-0 ps-3">{{reports}}</p>
+                        <h6 class="mb-0 text-xs ps-3">{{reports}}</h6>
+                    </td>
+                    <td> 
+                        <h6 class="mb-0 text-xs">{{idReport}}</h6>
                     </td>
                     <td>
-                        <p class="text-xs font-weight-bold mb-0">{{idReport}}</p>
+                        <h6 class="mb-0 text-xs">{{reportStatus}}</h6>  
                     </td>
                     <td>
-                        <p class="text-xs font-weight-bold mb-0">{{reportStatus}}</p>
+                        <h6 class="mb-0 text-xs">{{createdAt}}</h6>
                     </td>
                     <td>
-                        <p class="text-xs font-weight-bold mb-0">{{createdAt}}</p>
-                    </td>
-                    <td class="align-middle">
-                        <a href="/stories/edit/{{_id}}" class="text-success" data-toggle="tooltip" data-original-title="Edit user"> Edit </a>
-                        <a href="/stories/{{_id}}" type="submit" class="text-warning ps-2" data-toggle="tooltip" data-original-title="Edit user"> Delete </a>
+                        <div class="ms-auto text-end">
+                            <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="/stories/{{_id}}"><i class="far fa-trash-alt me-2"></i>Delete</a>
+                            <a class="btn btn-link text-dark px-3 mb-0" href="/stories/edit/{{_id}}"><i class="fas fa-pencil-alt text-dark me-2" aria-hidden="true"></i>Edit</a>
+                        </div>
                     </td>
                     </tr>
                     {{/each}}
