--- a/views/layouts/settings.hbs
+++ b/views/layouts/settings.hbs
@@ -21,7 +21,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-icon.png">
   <link rel="icon" type="image/png" href="/img/favicon.png">
   <title>
-    Argon Dashboard 2 by Creative Tim
+    Admin Settings
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
@@ -37,7 +37,7 @@
 
 <body class="g-sidenav-show bg-gray-100">
 <div class="min-height-300 bg-primary position-absolute w-100"></div>
-{{> _header}}
+  {{> _header}}
   <div class="main-content position-relative max-height-vh-100 h-100">
     {{{body}}}
   </div>
