--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -22,11 +22,11 @@
           <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Halaman Akun</h6>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/setting">
+          <a class="nav-link " href="/settings">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
+              <i class="ni ni-settings-gear-65 text-dark text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text ms-1">Profil</span>
+            <span class="nav-link-text ms-1">Setting</span>
           </a>
         </li>
         <li class="nav-item">
