--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="card-body">
-              <form role="form" action="/signup" method="POST">
+              <form role="form" action="/auth/signup" method="POST">
                 <div class="mb-3">
                   <input type="text" name="fullName" class="form-control" placeholder="Nama Lengkap" aria-label="Name">
                 </div>
