--- a/views/report.hbs
+++ b/views/report.hbs
@@ -38,7 +38,7 @@
                   <textarea name="reports" placeholder="Isi Pengaduan" class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Kirim Laporan</button>
+                  <button type="submit" class="btn btn-lg btn-primary btn-lg w-100 mt-4 mb-0">Kirim Laporan</button>
                 </div>
               </form>
             </div>
