--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -75,9 +75,9 @@
                   </label>
                 </div>
                 <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign up</button>
+                  <button type="submit" class="btn btn-lg btn-primary btn-lg w-100 mt-4 mb-0">Sign up</button>
                 </div>
-                <p class="text-sm mt-3 mb-0">Sudah punya akun admin? <a href="/" class="text-dark font-weight-bolder">Sign in</a></p>
+                <p class="text-sm mt-3 mb-0">Sudah punya akun admin? <a href="/" class="text-primary font-weight-bolder">Sign in</a></p>
               </form>
             </div>
           </div>
