add tracking laporan

--- a/views/stories/edit.hbs
+++ b/views/stories/edit.hbs
@@ -55,8 +55,8 @@
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">Komentar tambahan</label>
-                    <input class="form-control" type="text" name="additional" value="{{story.additional}}">
+                    <label for="exampleFormControlTextarea1">Komentar Tambahan</label>
+                    <textarea class="form-control" name="additional" id="exampleFormControlTextarea1" rows="3" placeholder="Komentar tambahan">{{story.additional}}</textarea>
                   </div>
                 </div>
                 <div class="text-center">
